--- a/futurelanding.github.io-master/career-page.html
+++ b/futurelanding.github.io-master/career-page.html
@@ -6,7 +6,7 @@
 
     <title>Future World</title>
     <meta
-      content="FWC is a friendly and trustable IT Staffing /
+      content="Future World is a friendly and trustable IT Staffing /
     Consulting manpower Partner of 50+ emerging and
     leading companies in Bangalore and pan India."
       name="descriptison"
