--- a/futurelanding.github.io-master/index.html
+++ b/futurelanding.github.io-master/index.html
@@ -245,7 +245,7 @@
             <div
               class="col-xl-7 col-lg-6 icon-boxes d-flex flex-column align-items-stretch justify-content-center py-5 px-lg-5"
             >
-              <h1>About FWC</h1>
+              <h1>About Future World</h1>
            
               <p class="justice">
                 Future World  has been done over the years with a view of delivering customized quality Manpower resources and technical solutions to our diverse industry and service sector based clients. It is managed by highly qualified professional specialists with several years of training and experience both in India and abroad. Through a unique combination of skills, competencies, knowledge and favorable experience ,we have scaled great heights in terms of our size & stature in a short period of time. Our talisman is our pool of IT consultants backed by a portfolio which includes assignments with Fortune 500 companies and other blue chip corporations.
@@ -1681,7 +1681,7 @@
                 <strong>Phone:</strong> +91- 8861786566<br />
                 080- 40977471 <br />
                 <strong>Email:</strong>
-                hr@fwc.co.in sales@fwc.co.in
+                hr@futureworldconsultancy.com <br> sales@futureworldconsultancy.com
                 <br />
               </p>
             </div>
